<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/lancarFragment">

    <fragment
        android:id="@+id/lancarFragment"
        android:name="com.example.appfinanceiro.ui.lancar.LancarFragment"
        android:label="@string/nav_lancar"
        tools:layout="@layout/fragment_lancar" />

    <fragment
        android:id="@+id/transacoesFragment"
        android:name="com.example.appfinanceiro.ui.transacoes.TransacoesFragment"
        android:label="@string/nav_transacoes"
        tools:layout="@layout/fragment_transacoes" />

    <fragment
        android:id="@+id/baldesFragment"
        android:name="com.example.appfinanceiro.ui.baldes.BaldesFragment"
        android:label="@string/nav_baldes"
        tools:layout="@layout/fragment_baldes">

        <action
            android:id="@+id/action_baldesFragment_to_baldeFormFragment"
            app:destination="@id/baldeFormFragment" />

    </fragment>

    <!-- Bottom sheet: formulário curto não merece tela cheia. -->
    <dialog
        android:id="@+id/baldeFormFragment"
        android:name="com.example.appfinanceiro.ui.baldes.BaldeFormFragment"
        android:label="@string/novo_balde"
        tools:layout="@layout/fragment_balde_form">

        <argument
            android:name="baldeId"
            android:defaultValue="0L"
            app:argType="long" />

    </dialog>

</navigation>
